# comfyUI-LMStudio-nodes

./: .gitignore  README.md  __init__.py  client.py  connect_node.py  image_to_text_node.py  iotypes.py  models.py  pyproject.toml  requirements.txt  routes.py  text_gen_node.py
tests/: conftest.py  test_behavioral_contracts.py  test_client.py  test_client_full.py  test_connect_node.py  test_coverage_gaps.py  test_entrypoint.py  test_image_encoding_contracts.py  test_image_to_text_node.py  test_models_iotypes.py  test_routes.py  test_text_gen_node.py
tests/helpers/: fakes.py  imports.py
web/: lmstudio_connect.js
