[project]
name = "comfyui-lmstudio-node"
description = "ComfyUI nodes for remote LMStudio servers via OpenAI API v1-compatible endpoints."
version = "0.1.0"
license = { text = "MIT" }
dependencies = [
  "openai>=2.7.1,<3.0.0",
  "numpy>=1.25.0",
  "Pillow",
]

[tool.comfy]
DisplayName = "LMStudio Remote Nodes"
PublisherId = "geraldlonlas"
Icon = ""
web = "web"
