[project]
name = "comfyui-lmstudio-node"
description = "ComfyUI nodes for remote LMStudio servers via OpenAI API v1-compatible endpoints."
version = "0.1.0"
license = { text = "MIT" }
dependencies = [
  "openai>=2.7.1,<3.0.0",
  "numpy>=1.25.0",
  "Pillow",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "aiohttp>=3.9.0",
]

[tool.comfy]
DisplayName = "LMStudio Remote Nodes"
PublisherId = "geraldlonlas"
Icon = ""
web = "web"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
omit = [
  "tests/*",
  "web/*",
]

[tool.coverage.report]
skip_empty = true
